--- a/cssquiz.html
+++ b/cssquiz.html
@@ -96,7 +96,7 @@
           <p class="home-project-blurb">Dec'16 - Jan'17</p>
         </div>
         <div class="col-md-6 home-project-right">
-          <div class="card card-elt"><a href="http://placehold.it/1500x925" target="_blank"><img class="img-responsive" src="http://placehold.it/1500x925" title="Click to see enlarged image"/></a>
+          <div class="card card-elt"><a href="img/hcf1.png" target="_blank"><img class="img-responsive" src="img/hcf1.png" title="Click to see enlarged image"/></a>
           </div>
         </div>
       </div>
@@ -111,7 +111,8 @@
         <div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li><a href="#challenge">Challenge</a></li>
+              <li><a href="#problem">Problem</a></li>
+              <li><a href="#solution">Solution</a></li>
             </ul>
           </div>
         </div>
@@ -123,9 +124,9 @@
           <section>
             <h1>Making of CSS Quizzer webapp</h1>
             <p class="subtitle">Helping people learn CSS</p>
-            <h2>Problem statement</h2>
+            <h2 id="problem">Problem statement</h2>
             <p>For our Web design class, we had to do a small project involving 2 people. We decided to make a CSS Quizzer to help people learn CSS. The primarly purpose of this project was to practice our programming skills and learn how to use Python and Flask to create a web application. We also deployed this application on Heroku and learnt about Web application deployment processes. </p>
-            <h2>Solution</h2>
+            <h2 id="solution">Solution</h2>
             <p>We built a mobile-friendly webapp for CSS quiz. It has the following features:</p>
             <ol>
               <li>Supports two kinds of questions: Multiple choice and Fill in the blanks</li>
