--- a/diabetes.html
+++ b/diabetes.html
@@ -102,7 +102,7 @@
           <p class="home-project-blurb">Feb '16 - 1 day</p>
         </div>
         <div class="col-md-6 home-project-right">
-          <div class="card card-elt"><a href="http://placehold.it/1500x925" target="_blank"><img class="img-responsive" src="http://placehold.it/1500x925" title="Click to see enlarged image"/></a>
+          <div class="card card-elt"><a href="img/viz.png" target="_blank"><img class="img-responsive" src="img/viz.png" title="Click to see enlarged image"/></a>
           </div>
         </div>
       </div>
@@ -117,7 +117,10 @@
         <div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li><a href="#challenge">Challenge</a></li>
+              <li><a href="#process">Process</a></li>
+              <li><a href="#design">Design</a></li>
+              <li><a href="#visualization">Visualization</a></li>
+              <li><a href="#insights">Insights</a></li>
             </ul>
           </div>
         </div>
@@ -130,15 +133,15 @@
             <h1>Diabetes prevalence</h1>
             <p class="subtitle">Is there any relation between income and diabetes prevalence?</p>
             <p class="firstpara">I did this project out of my own interest when I started studying data visualization during my free time. Here, I decided to use visualization to gain insights in the diabetes prevalence dataset provided by World bank. I wanted to know if there was any relationship between the income group of the country and the diabetes prevalence percentages.</p>
-            <h2>Process</h2>
+            <h2 id="process">Process</h2>
             <p>The dataset consisted of 2 files. One described the diabetes prevalence percentages per country. Another file provided the income category of each country. To plot the bubbles at the right coordinates on the geographical map, I also needed latitude and longitude data for each country which I got from the Open geocode website. I then combined all the data from various files into a single JSON object. I used D3.js to build this visualization and the JSON data produced earlier the data fed to D3.js code.</p>
-            <h2>Design choices</h2>
+            <h2 id="design">Design choices</h2>
             <ol>
               <li>To aid in this analysis I constructed the visualization provided below where I used a proportional symbol map to encode the diabetes prevalence percentages in the size of the bubble and the color of the bubble indicates the income category. </li>
               <li>There are only 5 categories but these rankings can be ranked in descending order by income and hence I decided to use various tints of the same color to indicate the drop in income.</li>
               <li>I used violet color because it is usually used in health related contexts.</li>
             </ol>
-            <h2>Interactive visualization</h2>
+            <h2 id="visualization">Interactive visualization</h2>
           </section>
         </article>
       </div>
@@ -1428,7 +1431,7 @@
       <div class="row">
         <article>
           <section> 
-            <h2>Insights</h2>
+            <h2 id="insights">Insights</h2>
             <p>One interesting insight you can get immediately from this visualization is that the larger bubbles are always lighter than the smaller bubbles. What this means is that diabetes prevalence is more common in low-income countries compared to high-income countries.Smaller islands like French Polynesia have the highest diabetes prevalence percentages. You can find the interactive D3visualiation below. Code is available on Github here Github</p>
           </section>
         </article>
