--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           </table>
         </div>
         <div class="col-sm-8 project-banner-setting">
-          <div class="card1" style="padding:1rem"><a href="cssquiz.html"><img class="img-fluid" src="http://placehold.it/1500x925"/></a></div>
+          <div class="card1" style="padding:1rem"><a href="cssquiz.html"><img class="img-fluid" src="img/hcf1.png"/></a></div>
         </div>
       </div>
       <div class="row home-brief" style="padding-bottom:5rem">
@@ -198,7 +198,7 @@
           </table>
         </div>
         <div class="col-sm-8 project-banner-setting">
-          <div class="card1" style="padding:1rem"><a href="diabetes.html"><img class="img-fluid" src="http://placehold.it/1500x925"/></a></div>
+          <div class="card1" style="padding:1rem"><a href="diabetes.html"><img class="img-fluid" src="img/viz.png"/></a></div>
         </div>
       </div>
     </div>
