--- a/shure.html
+++ b/shure.html
@@ -111,7 +111,11 @@
         <div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li><a href="#challenge">Challenge</a></li>
+              <li><a href="#ideation">Ideation</a></li>
+              <li><a href="#research">Research</a></li>
+              <li><a href="#design">Design</a></li>
+              <li><a href="#award">Award</a></li>
+              <li><a href="#takeaway">Takeaways</a></li>
             </ul>
           </div>
         </div>
@@ -124,9 +128,9 @@
             <h1>Shure design jam</h1>
             <p class="subtitle">Raise Shure brand awareness by making a truly social music app</p>
             <p>There was no existing mobile application to make the music truly social. Many music apps focus on managing song libraries and listening. Shure wanted a music app that is social to help promote brand awareness of their Sound instruments</p>
-            <h2>Ideation</h2>
+            <h2 id="ideation">Ideation</h2>
             <p>We started the design process by brainstorming our ideas for deciding on features for our product. Next we decided to make a product which is intuitive and simple to follow. This helps the user to easily record and share as well as enjoy the concert too. We concluded that it will be easier to make a mobile application as it would be easy to carry to concerts and any place of social gatherings. We also decided the target audience to be anybody who is a regular concert goer and likes to share music with friends. </p>
-            <h3>Competitive analysis</h3>
+            <h3 id="research">Competitive analysis</h3>
             <p>I did the competitive analysis for the project for which I focused on the looking at the existing application available in google play store. </p>
             <p>he application that I felt was more useful for this purpose was the Boomio. Boomio had the following features for recording and sharing the music:</p>
             <ol>
@@ -141,7 +145,7 @@
               <li>File sharing via email, text, iTunes, Airdrop and Dropbox</li>
             </ol>
             <p>Shortcomings of MOTIV were that there was no social sharing and uers cannot comment or share music files.</p>
-            <h2>Design</h2>
+            <h2 id="design">Design</h2>
             <h3>MVP1 feature list</h3>
             <p>After looking at the existing competitors on the market and MOTIV application on google play store, I decided on adding the feature of Gps locator and LONG PRESS INTERACTION gesture. I believe that one finger press would be good for quick recording. Further, GPS feature would help the users to locate events nearby. In addition, it would also have a default location based on the GPS location. Some of the other features we decided included the following </p>
             <ol>
@@ -182,7 +186,7 @@
       <div class="row">
         <article class="nobottompadding">
           <section>
-            <h2>Judge's decision</h2>
+            <h2 id="award">Judge's decision</h2>
             <p>We are awarded the 2nd position for our idea, since we managed to finish the information flow, paper prototype, sample Hi FI mockups and presentation slides within 1.5 hours. The judges appreciated the idea of GPS locator and collaboration.</p>
           </section>
         </article>
@@ -200,7 +204,7 @@
       <div class="row">
         <article class="nobottompadding">
           <section>
-            <h2>Takeaways</h2>
+            <h2 id="takeaway">Takeaways</h2>
             <p>This was my first design jam and I was quite new to the idea of working together in a team. It made me realize the importance of working together in a tight schedule. I also had the opportunity to meet and work with people from different backgrounds. Lastly I felt I could improve more on my presentation skills as I usually speak very fast.</p>
           </section>
         </article>
