--- a/story.html
+++ b/story.html
@@ -126,7 +126,7 @@
             <tr>
               <td style="width:33%">
                 <div class="card2" style="padding:0.7rem">
-                  <figure class="imghvr-fade" style="background-color: #94001c"><img class="img-responsive" src="img/delhi.jpg" title="Click to see enlarged image"/>
+                  <figure class="imghvr-fade" style="background-color: #242134"><img class="img-responsive" src="img/delhi.jpg" title="Click to see enlarged image"/>
                     <figcaption style="background-color: #242134">
                       <h2 class="h2tufte">Growing up</h2>
                       <p class="ptufte">Delhi - I was born and brought up here. Sometimes I get nostalgic and realize how much I loved Delhi and everything about it.</p>
@@ -136,7 +136,7 @@
               </td>
               <td>                               
                 <div class="card2" style="padding:0.7rem">
-                  <figure class="imghvr-fade" style="background-color: #94001c"><img class="img-responsive" src="img/seattle.png" title="Click to see enlarged image"/>
+                  <figure class="imghvr-fade" style="background-color: #242134"><img class="img-responsive" src="img/seattle.png" title="Click to see enlarged image"/>
                     <figcaption style="background-color: #242134">
                       <h2 class="h2tufte">Resident of Seattle</h2>
                       <p class="ptufte">I moved to Seattle in 2013 and now I call it my US hometown! I don't know if it's the cofree or seahawks, but I love this beautiful city! And who doesn't like watching an active volcano from the backyard :P</p>
@@ -148,7 +148,7 @@
             <tr>
               <td>
                 <div class="card2" style="padding:0.7rem">
-                  <figure class="imghvr-fade" style="background-color: #94001c"><img class="img-responsive" src="img/board.png" title="Click to see enlarged image"/>
+                  <figure class="imghvr-fade" style="background-color: #242134"><img class="img-responsive" src="img/board.png" title="Click to see enlarged image"/>
                     <figcaption style="background-color: #242134">
                       <h2 class="h2tufte">Boardgames!</h2>
                       <p class="ptufte">When I am not designing, I am often engrossed with playing strategy board games.  This has often helped me to look at problems from diverse perspectives.</p>
@@ -162,7 +162,7 @@
                     <tr height="50%">
                       <td>                                           
                         <div class="card2" style="padding:0.7rem">
-                          <figure class="imghvr-fade" style="background-color: #94001c"><img class="img-responsive" src="img/umich.jpg" title="Click to see enlarged image"/>
+                          <figure class="imghvr-fade" style="background-color: #242134"><img class="img-responsive" src="img/umich.jpg" title="Click to see enlarged image"/>
                             <figcaption style="background-color: #242134">
                               <h2 class="h2tufte">Go Blue!</h2>
                               <p class="ptufte">I am currently a graduate student of University of Michigan Ann Arbor and a proud wolverine. Wherever we are in the world, we wolverines share a special bond from protecting the sacred M in the Diag.</p>
@@ -174,7 +174,7 @@
                     <tr>
                       <td>
                         <div class="card2" style="padding:0.7rem">
-                          <figure class="imghvr-fade" style="background-color: #94001c"><img class="img-responsive" src="img/origami1.png" title="Click to see enlarged image"/>
+                          <figure class="imghvr-fade" style="background-color: #242134"><img class="img-responsive" src="img/origami1.png" title="Click to see enlarged image"/>
                             <figcaption style="background-color: #242134">
                               <h2 class="h2tufte">Design</h2>
                               <p class="ptufte">I enjoy problem solving and simplifying complex things</p>
