--- a/website_design.html
+++ b/website_design.html
@@ -111,7 +111,12 @@
         <div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li><a href="#challenge">Challenge</a></li>
+              <li><a href="#l1">Research</a></li>
+              <li><a href="#l2">Goals</a></li>
+              <li><a href="#l3">Decisions</a></li>
+              <li><a href="#l4">Typography</a></li>
+              <li><a href="#l5">Development</a></li>
+              <li><a href="#l6">Takeaways</a></li>
             </ul>
           </div>
         </div>
@@ -127,14 +132,14 @@
             <h2>Attacking it as a UX problem</h2>
             <p>Upon inspecting it as a UX problem, I realized that I first needed to define a success criteria (goal) for my portfolio. In turn that led me to ask &mdash; Who is the target audience?</p>
             <p>I kept the target audience was prospective employers. I then asked myself &mdash; what would prospective employers like to see in my portfolio? </p>
-            <h2>Research</h2>
+            <h2 id="l1">Research</h2>
             <p>It would have been awesome if I could directly ask the prospective employers what they expected out of a portfolio. Since, that was not possible, I did a bunch of research of my own:</p>
             <ul>
               <li>Talked to seniors at my university and visited their portfolio websites</li>
               <li>Looked at portfolios of UX designers employed already</li>
               <li>Read various internet articles on building a portfolio</li>
             </ul>
-            <h2>Goals</h2>
+            <h2 id="l2">Goals</h2>
             <p>Based on above research I set the following design goals.</p>
             <div class="table-responsive">
               <table class="table table-bordered heuristic-table">
@@ -170,7 +175,7 @@
                 </tbody>
               </table>
             </div>
-            <h2>Explorations &amp; decisions</h2>
+            <h2 id="l3">Explorations &amp; decisions</h2>
             <h3>KISS principle. Occam's razor</h3>
             <p>No fancy animations and Javascript libraries that distract or conflict with animation present in your actual work. Keep website design simple and let your real work shine through. When it doubt choose the simpler option.</p>
             <h3>Home page IA</h3>
@@ -287,7 +292,7 @@
       <div class="row">
         <article class="nobottompadding">
           <section>
-            <h3>Typography</h3>
+            <h3 id="l4">Typography</h3>
             <p>
               <label class="margin-toggle" for="mn-figure-1">&#8853;</label>
               <input class="margin-toggle" type="checkbox" id="mn-figure-1"><span class="marginnote"><img src="img/w_portfoliio_design/book.jpg"><br><br><br><img src="img/w_portfoliio_design/typographicscale.gif"><span class="ptufte">the standard typographic scale as an example</span></span>
@@ -316,7 +321,7 @@
             <p>Edward Tufte also provides a special markup for hyperlinks. The default underlining provided by browsers for hyperlinks is very thick and it draws the link over the descenders of letters in text. Tufte provides CSS code which does better job at underlining links.</p>
             <p>Tufte's books make extensive use of margin notes to provide additional information that is useful but not necessary for completeness of main content. I have followed this guideline to provide additional imagery and useful information.</p>
             <p>The practices followed by Edward Tufte have been put down in a CSS file as a Github project called <a href="https://github.com/edwardtufte/tufte-css">Tufte-CSS</a></p>
-            <h2 id="">Development</h2>
+            <h2 id="l5">Development</h2>
             <h3>Themes and Wix didn't suffice</h3>
             <p>First I tried using an existing theme from the internet and altering it. However, that was not extensible enough to be able to modify it to meet the new design that I had produced. I ran into the same issue with many themes.</p>
             <p>I then turned to <strong>Wix</strong>. I was initially satisfied with Wix. I really like that the fact that I completely control the layout of the website. Sadly, it was too good to be true. </p>
@@ -346,7 +351,7 @@
       <div class="row">
         <article class="nobottompadding">
           <section>
-            <h3>Lessons learnt</h3>
+            <h3 id="l6">Lessons learnt</h3>
             <p>Designing this portfolio myself has been a great learning experience. I mastered a lot of CSS3 concepts, SCSS, Jade and Javascript because of this project. I learnt a lot about typography and fonts.</p>
             <p>It was also immensely satisfying to applying UX design principles to design my own portfolio.</p>
           </section>
