Minor updates and some files

--- a/instapark.html
+++ b/instapark.html
@@ -426,7 +426,7 @@
           <div class="card card-elt"><a href="img/w_instapark/f2_wants_stats_to_set_price.gif" target="_blank"><img class="img-responsive" src="img/w_instapark/f2_wants_stats_to_set_price.gif" title="Click to see enlarged image"/></a>
             <div class="container-fluid">
               <div class="row" style="text-align:center">
-                <h3 class="h3tufte">Seller utilizes stats provided by Instapark to set a good price</h3>
+                <h3 class="h3tufte">Seller utilizes stats to set a good price</h3>
               </div>
             </div>
           </div>
