--- a/story.html
+++ b/story.html
@@ -138,7 +138,7 @@
                 <div class="card2" style="padding:0.7rem">
                   <figure class="imghvr-fade" style="background-color: #242134"><img class="img-responsive" src="img/seattle.png" title="Click to see enlarged image"/>
                     <figcaption style="background-color: #242134">
-                      <h2 class="h2tufte">Resident of Seattle</h2>
+                      <h2 class="h2tufte">Calling Seattle my home!</h2>
                       <p class="ptufte">I moved to Seattle in 2013 and now I call it my US hometown! I don't know if it's the cofree or seahawks, but I love this beautiful city! And who doesn't like watching an active volcano from the backyard :P</p>
                     </figcaption>
                   </figure>
