--- a/bodhi.html
+++ b/bodhi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sample title</title>
+    <title>Bodhi - Fedora update management portal</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
@@ -82,7 +82,7 @@
         <table>
           <tr>
             <td class="project">
-              <h4 class="home-project-title" style="padding-bottom:0">Latitude 90 - the origin</h4>
+              <h4 class="home-project-title" style="padding-bottom:0">Bodhi - Fedora update management portal</h4>
             </td>
             <td class="line" style="padding-left:1em; vertical-align:middle">
               <svg height="6" width="100%">
@@ -91,9 +91,9 @@
             </td>
           </tr>
         </table>
-        <h3 class="home-project-subtitle">Indie gaming company, 		<a href='http://www.ghostroadhouse.com'>Ghost roadhouse</a> had an exciting game concept, but mobile app usage was very low. To do this, they hired us to redesign mobile game to improve app engagement. 		<br/> 		In <b>12 weeks</b>, they had an app that got rave reviews on kickstarter and 		<a href='https://www.kickstarter.com/projects/1479338853/latitude-90-the-origin'>$20,000</a> 		funding</h3>
-        <h6 class="home-project-tags">research, redesign</h6>
-        <p class="home-project-blurb">Sep '15 - Dec '15</p>
+        <h3 class="home-project-subtitle"></h3>
+        <h6 class="home-project-tags">research, redesign, evaluation</h6>
+        <p class="home-project-blurb">May'16 - Aug'16</p>
       </div>
       <div class="col-md-6 home-project-right">
         <div class="card card-elt"><a href="img/origin_banner_resized_3.png" target="_blank"><img class="img-responsive" src="img/origin_banner_resized_3.png" title="Click to see enlarged image"/></a>
@@ -106,14 +106,17 @@
     <div class="container">
       <div class="navbar-header">
         <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#myNavbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-        <p><a class="navbar-brand" href="index.html">Home</a><span class="navbar-brand">/</span><span class="navbar-brand navbar-brand-currentpage">Latitude 90 - the origin</span></p>
+        <p><a class="navbar-brand" href="index.html">Home</a><span class="navbar-brand">/</span><span class="navbar-brand navbar-brand-currentpage">Bodhi - Fedora update management portal</span></p>
       </div>
       <div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li><a href="#0">0</a></li>
-            <li><a href="#1">1</a></li>
-            <li><a href="#2">2</a></li>
+            <li><a href="#role">Role</a></li>
+            <li><a href="#challenge">Challenge</a></li>
+            <li><a href="#research">Research</a></li>
+            <li><a href="#brainstorming">Brainstorming</a></li>
+            <li><a href="#design">Final design</a></li>
+            <li><a href="#takeaway">Takeaways</a></li>
           </ul>
         </div>
       </div>
@@ -126,10 +129,10 @@
         <section>
           <h1>Re-making of Bodhi</h1>
           <p class="subtitle">An enterprise Operating system testing platform</p>
-          <h2>Role
+          <h2 id="role">Role
             <p>As an intern, I led the entire project with assistance from my mentor Mo. My mentor had given me sufficient accesss and freedom to pursue this project on my own and she was always available to provide me assistance and reviews.</p>
           </h2>
-          <h2>The challenge</h2>
+          <h2 id="challenge">The challenge</h2>
           <p>Bodhi is a modular web-based system where red hat's developers, testers and the open source community users collaborate on testing, voting and updating packages. Upon taking up this project, I quickly wanted to get a sense of the problem space before I plan my approach to solving the problems. With that in mind, I quickly had some discussions with some Bodhi users who were already present that day on that floor and nearby floors. Here are a few things I heard:</p>
           <blockquote>
             <p>I use bodhi everyday, but I often get confused by what package to work on</p>
@@ -140,7 +143,7 @@
             <footer>Developer-2, Redhat Inc.</footer>
           </blockquote>
           <p>I got a sense that developers were not too keen on using the web interface and testers had a hard time navigating the web interface. This was especially true when new testers were introduced to the web UI. The challenge was to increase the Web UI engagement amongst the community.</p>
-          <h2>User research</h2>
+          <h2 id="research">User research</h2>
           <p>As I sat down to ponder more on the problems being faced by the users, I divided them into 3 main categories for my redesign project.</p>
           <ul>
             <li><strong>Testers and release engineers</strong> working for Redhat who frequently use the web application.</li>
@@ -258,7 +261,7 @@
               <dt>Help and documentation</dt>
               <dd>Further, having to search for fedora wiki pages for documentation was both time consuming and cumbersome.</dd>
             </dl>
-            <h2>Personas</h2>
+            <h2 id="brainstorming">Personas</h2>
             <p>Equipped with the data collected from user research and heuristic evaluation, I conducted personas to help me guide the design stage.</p>
             <h3>Micah</h3>
             <p>Micah is a red hat tester who has been working on packages and giving karma through the update system. His typical day involved meeting with the developers about the packages and often updating the status of these packages in Bodhi. In between he attends the stand up meeting about his work in progress and finishes up the technical documentation required for the package.</p>
@@ -272,7 +275,7 @@
             <p>Once I brainstormed several solutions, I wanted to gather some data on which alternatives might be better. First, I reviewed my ideas with my mentor. My mentor's response was positive on the ideas. We thought it might be better to gather data from real customers on the ideas that I had. Instead of showing customers with all the alternative solutions that I had, I prepared a survey that included some basic questions to understand the audience and a question each for each of the various tasks for which I had evaluated multiple solutions. For each of them, I provided them a view of the current system as well as my proposed solution and asked them a bunch of questions to help me find out how much they preferred the second solution.</p>
             <p>Here is a link to the<a href="https://www.surveymonkey.com/r/XNZ76TT">survey</a></p>
             <p>The 2 tasks for which I gathered data in this survey were the Download widget and the Bugzilla integration. I chose these two only because they were the only new features that I was proposing we add to the website. Because they were new features they would also require additional back-end integration work and quantifying the benefit of these new features would make it easy for management to prioritize the implementation of these features. Below, is a screenshot from the survey.</p>
-            <h2>Final design</h2>
+            <h2 id="design">Final design</h2>
             <p>Based on the positive feedback from the survey and from my mentor on the design proposals presented as low-fi designs, I went forward and made the hi-fidelity designs for the same. Redhat had recently come up with a new style guide called <a href="http://www.patternfly.org">Patternfly</a> for enterprise applications. Since I was re-designing Bodhi from the ground up I decided to use this new style guide. Since, CSS files were already available for patternfly, it turned out to be easier to build the hi-fidelity prototype by just coding it using the <a href="https://github.com/patternfly/patternfly">Patternfly library</a></p>
             <h3>Information architecture</h3>
             <p>For the design of the website, I grouped some of the webpage elements into the headers given below. I basically grouped them into Home page, Updates page and Statistics page</p>
@@ -324,7 +327,7 @@
           <section>
             <h3>Interaction map</h3>
             <h3>Task flows</h3>
-            <h2>What I learned from this experience</h2>
+            <h2 id="takeaway">What I learned from this experience</h2>
             <p>I felt that employees suffer more because most enterprise applications do not provide engaging user experience. This is because of the fact that most of the decisions taken by the software managers are primarily concerned with stability, security and scalability and not usability. Thus, it is not an easy goal to achieve and more often than not there are lot of that a lot of esoteric constraints when designing an enterprise application. So,sometimes it becomes very hard  to resist becoming a pushover designer. However, that itself can be taken as a good challenge.</p>
             <p>What I enjoyed most in my internship at Red Hat is that, my users were literally down the hall and I can always meet and emphatize  with them. I really enjoyed the informal conversations I had with them. Having such relaxed conservations enabled them to speak freely about their problems and pain points. Well, who doesn't like the company of honest people!</p>
           </section>
