--- a/bodhi.html
+++ b/bodhi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Bodhi - Fedora update management portal</title>
+    <title>Bodhi</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
@@ -82,7 +82,7 @@
         <table>
           <tr>
             <td class="project">
-              <h4 class="home-project-title" style="padding-bottom:0">Bodhi - Fedora update management portal</h4>
+              <h4 class="home-project-title" style="padding-bottom:0">Bodhi</h4>
             </td>
             <td class="line" style="padding-left:1em; vertical-align:middle">
               <svg height="6" width="100%">
@@ -106,7 +106,7 @@
     <div class="container">
       <div class="navbar-header">
         <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#myNavbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-        <p><a class="navbar-brand" href="index.html">Home</a><span class="navbar-brand">/</span><span class="navbar-brand navbar-brand-currentpage">Bodhi - Fedora update management portal</span></p>
+        <p><a class="navbar-brand" href="index.html">Home</a><span class="navbar-brand">/</span><span class="navbar-brand navbar-brand-currentpage">Bodhi</span></p>
       </div>
       <div>
         <div class="collapse navbar-collapse" id="myNavbar">
@@ -114,7 +114,7 @@
             <li><a href="#role">Role</a></li>
             <li><a href="#challenge">Challenge</a></li>
             <li><a href="#research">Research</a></li>
-            <li><a href="#brainstorming">Brainstorming</a></li>
+            <li><a href="#brainstorming">Brainstorming and Surveys</a></li>
             <li><a href="#design">Final design</a></li>
             <li><a href="#takeaway">Takeaways</a></li>
           </ul>
@@ -133,7 +133,9 @@
             <p>As an intern, I led the entire project with assistance from my mentor Mo. My mentor had given me sufficient accesss and freedom to pursue this project on my own and she was always available to provide me assistance and reviews.</p>
           </h2>
           <h2 id="challenge">The challenge</h2>
-          <p>Bodhi is a modular web-based system where red hat's developers, testers and the open source community users collaborate on testing, voting and updating packages. Upon taking up this project, I quickly wanted to get a sense of the problem space before I plan my approach to solving the problems. With that in mind, I quickly had some discussions with some Bodhi users who were already present that day on that floor and nearby floors. Here are a few things I heard:</p>
+          <p>Bodhi is a modular web-based system where red hat's developers, testers and the open source community users collaborate on testing, voting and updating packages. </p>
+          <p>Upon taking up this project, I quickly wanted to get a sense of the problem space before I plan my approach to solving the problems. With that in mind, I quickly had some discussions with some Bodhi users who were already present that day on that floor and nearby floors. </p>
+          <p>Here are a few things I heard:</p>
           <blockquote>
             <p>I use bodhi everyday, but I often get confused by what package to work on</p>
             <footer>Developer-1, Redhat Inc.</footer>
@@ -150,13 +152,11 @@
             <li><strong>Packagers and Developers</strong> working for Redhat who sometimes use the web UI as well as the command line interface.</li>
             <li><strong>Open-source contributors</strong> who were not employees of Redhat</li>
           </ul>
-          <h3>The Contextual Inquiry</h3>
-          <p>Then, I interviewed testers, developers, packagers and release engineers and observed their day to day process while they are in office. This way it helped me understand their process flow better and note down any problems they were facing. Based on the interviews, I built an affinity wall to understand their concerns and find any potential use cases for redesign.</p>
-          <dl>
-            <dt>What about the workflow of remote open-source contributors</dt>
-            <dd>It was hard to interview and observe open source community users as most of them were often in different timezones and spread various the country. However, I was able to interview a few during a open source hackathon event held in our office. This enabled me to observe and see what problems they were facing with the web ui. I included their interview answers in my affinity wall and collated the most important use cases for our redesign below</dd>
-          </dl>
-          <h3>Issues identified through user research</h3>
+          <h2>The Contextual Inquiry</h2>
+          <p>I interviewed testers, developers, packagers and release engineers and observed their day to day process while they are in office. This way it helped me understand their process flow better and note down any problems they were facing. Based on the interviews, I built an affinity wall to understand their concerns and find any potential use cases for redesign.</p>
+          <h3>How I studied workflow of remote <br/> open-source contributors</h3>
+          <p>It was hard to interview and observe open source community users as most of them were often in different timezones and spread various the country. However, I was able to interview a few during a open source hackathon event held in our office. This enabled me to observe and see what problems they were facing with the web ui. I included their interview answers in my affinity wall and collated the most important use cases for our redesign below</p>
+          <h3>Results</h3>
           <p>Here is a summary of issues I found through user research grouped by user category.</p>
         </section>
       </article>
@@ -271,10 +271,71 @@
             <p>James is currently a senior at the University of Boston majoring in computer science. He wants to contribute to the open source community and is often seen checking out the open source projects to contribute. He wants to prepare for his interviews so feels contributing to real projects would help him understand the fundamentals better. He just read about the bodhi project and starts checking the web ui for packages to test.</p>
             <h2>Brainstorming multiple solutions</h2>
             <p>I brainstormed multiple flows for comment and website navigation</p>
-            <h3>Survey for evaluation of alternatives</h3>
+          </section>
+        </article>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card card-elt"><a href="img/w_bodhi/s1.jpg" target="_blank"><img class="img-responsive" src="img/w_bodhi/s1.jpg" title="Click to see enlarged image"/></a>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card card-elt"><a href="img/w_bodhi/s2.jpg" target="_blank"><img class="img-responsive" src="img/w_bodhi/s2.jpg" title="Click to see enlarged image"/></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <article class="nobottompadding">
+          <section>
+            <h2>Survey for evaluation of alternatives</h2>
+            <h3>Survey design</h3>
             <p>Once I brainstormed several solutions, I wanted to gather some data on which alternatives might be better. First, I reviewed my ideas with my mentor. My mentor's response was positive on the ideas. We thought it might be better to gather data from real customers on the ideas that I had. Instead of showing customers with all the alternative solutions that I had, I prepared a survey that included some basic questions to understand the audience and a question each for each of the various tasks for which I had evaluated multiple solutions. For each of them, I provided them a view of the current system as well as my proposed solution and asked them a bunch of questions to help me find out how much they preferred the second solution.</p>
-            <p>Here is a link to the<a href="https://www.surveymonkey.com/r/XNZ76TT">survey</a></p>
+            <p>Here is a link to the <a href="https://www.surveymonkey.com/r/XNZ76TT">survey</a></p>
             <p>The 2 tasks for which I gathered data in this survey were the Download widget and the Bugzilla integration. I chose these two only because they were the only new features that I was proposing we add to the website. Because they were new features they would also require additional back-end integration work and quantifying the benefit of these new features would make it easy for management to prioritize the implementation of these features. Below, is a screenshot from the survey.</p>
+          </section>
+        </article>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12 center-block" style="float:none">
+        <div class="card card-elt"><a href="img/w_bodhi/ctotal.png" target="_blank"><img class="img-responsive" src="img/w_bodhi/ctotal.png" style="margin:0 auto" title="Click to see enlarged image"/></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <article class="nobottompadding">
+          <section>
+            <h3>Survey results</h3>
+            <p>The survey results are publicly viewable <a href="https://www.surveymonkey.com/results/SM-KF8HNX5F/">here on survey monkey</a>. Screenshots pasted here for convenience.</p>
+          </section>
+        </article>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12 center-block" style="float:none">
+        <div class="card card-elt"><a href="img/w_bodhi/sstotal.png" target="_blank"><img class="img-responsive" src="img/w_bodhi/sstotal.png" style="margin:0 auto" title="Click to see enlarged image"/></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <article class="nobottompadding">
+          <section>
             <h2 id="design">Final design</h2>
             <p>Based on the positive feedback from the survey and from my mentor on the design proposals presented as low-fi designs, I went forward and made the hi-fidelity designs for the same. Redhat had recently come up with a new style guide called <a href="http://www.patternfly.org">Patternfly</a> for enterprise applications. Since I was re-designing Bodhi from the ground up I decided to use this new style guide. Since, CSS files were already available for patternfly, it turned out to be easier to build the hi-fidelity prototype by just coding it using the <a href="https://github.com/patternfly/patternfly">Patternfly library</a></p>
             <h3>Information architecture</h3>
@@ -303,7 +364,7 @@
         </div>
       </div>
       <div class="col-md-4">
-        <h3 class="h3tufte"> <strong>Statistsics</strong></h3>
+        <h3 class="h3tufte"> <strong>Statistics</strong></h3>
         <p class="ptufte">Will have the overall metrics and weekly top testers information</p>
       </div>
     </div>
